--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.1.0-next.1",
     "@angular/platform-browser-dynamic": "~11.1.0-next.1",
     "@angular/router": "~11.1.0-next.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
